<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/app_name" />

    <LinearLayout
        android:id="@+id/id_Root_LinealLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/id_imageViewSend"
            android:layout_width="match_parent"
            android:layout_height="146dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/send" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_datos_personales"
            style="@style/LTextRootPanelReserva"/>

        <EditText
            android:id="@+id/txt_fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/str_full_name"
            android:inputType="textPersonName"
            android:layout_margin="6dp"/>

        <EditText
            android:id="@+id/txt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/str_telefono"
            android:inputType="phone"
            android:layout_margin="6dp"/>

        <EditText
            android:id="@+id/txt_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/str_country"
            android:inputType="textPersonName"
            android:layout_margin="6dp"/>

        <Button
            android:id="@+id/btn_next"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/str_btn_Next"
            android:theme="@style/LButtonHighlight" />

    </LinearLayout>

</LinearLayout>