<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".ReservarActivity"
android:orientation="vertical">

<android.support.v7.widget.Toolbar
    android:id="@+id/toolbar2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:minHeight="?attr/actionBarSize"
    android:theme="?attr/actionBarTheme"
    app:title="@string/app_name" />

<LinearLayout
    android:id="@+id/id_Root_LinealLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/id_imageViewSend"
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:contentDescription="TODO"
        app:srcCompat="@drawable/send" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_datos_personales"
        style="@style/LTextRootPanelReserva"/>
    <TextView
        android:id="@+id/txt_datos_personales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="5358538361 - Leandro Jose Capdeuner - Cuba"
        android:layout_marginBottom="8dp"
        style="@style/LTextLabel" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_Reservar"
        style="@style/LTextRootPanelReserva"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_casa"
        style="@style/LTextLabel" />


    <Spinner
        android:id="@+id/spi_hause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_transport"
        style="@style/LTextLabel" />
    <Spinner
        android:id="@+id/spi_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp" />

    <Button
        android:id="@+id/btn_reservar"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_Reservar"
        android:theme="@style/LButtonHighlight" />

</LinearLayout>

</LinearLayout>